--- a/index.html
+++ b/index.html
@@ -210,7 +210,43 @@
               <label for="cash" class="cart__form-label">Наличными при получении</label>
             </fieldset>
           </form>
-        
+        </div>
+      </section>
+      <section class="order">
+        <div class="continer">
+          <div class="order__title">
+            <p class="order__title-text">Заказ успешно размещен</p>
+            <p class="order__title-price">20&nbsp;000&nbsp;₽</p>
+          </div>
+          <p class="order__number">№43435</p>
+          <h3 class="order__table-title">Данные доставки</h3>
+          <table class="order__table">
+            <tr class="order__table-row">
+              <td class="order__table-name">Получатель</td>
+              <td class="order__table-value">Иванов Петр Александрович</td>
+            </tr>
+            <tr class="order__table-row">
+              <td class="order__table-name">Телефон</td>
+              <td class="order__table-value">+7 (737) 346 23 00</td>
+            </tr>
+            <tr class="order__table-row">
+              <td class="order__table-name">E-mail</td>
+              <td class="order__table-value">Ivanov84@gmail.com</td>
+            </tr>
+            <tr class="order__table-row">
+              <td class="order__table-name">Адрес доставки</td>
+              <td class="order__table-value">Москва, ул. Ленина, 21, кв. 33</td>
+            </tr>
+            <tr class="order__table-row">
+              <td class="order__table-name">Способ оплаты</td>
+              <td class="order__table-value">Картой при получении</td>
+            </tr>
+            <tr class="order__table-row">
+              <td class="order__table-name">Способ получения</td>
+              <td class="order__table-value">Доставка</td>
+            </tr>
+          </table>
+          <a href="/" class="order__button">На главную</a>
         </div>
       </section>
     </main>
