--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
         </div>
       </div>
     </section>
-    <section class="cart ">
+    <section class="cart none">
       <div class="container">
         <h2 class="cart__title">Корзина</h2>
         <div class="cart__wrapper">
@@ -510,8 +510,8 @@
         </div>
       </div>
     </section>
-    <section class="order none">
-      <div class="continer">
+    <section class="order ">
+      <div class="order__container">
         <div class="order__title">
           <p class="order__title-text">Заказ успешно размещен</p>
           <p class="order__title-price">20&nbsp;000&nbsp;₽</p>
